# cookiecutter_python

./: README.rst  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .readthedocs.yml  .travis.yml  LICENSE.txt  README.md  README.rst  TODO  pyproject.toml  setup.py
{{cookiecutter.project_slug}}/.github/workflows/: release.yml  test.yml  test_and_release.yml
{{cookiecutter.project_slug}}/docs/: Makefile  api_reference.rst  basic_usage.rst  conf.py  index.rst
{{cookiecutter.project_slug}}/docs/_templates/autosummary/: class.rst  module.rst
{{cookiecutter.project_slug}}/tests/: pytest.ini
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
