[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "{{ cookiecutter.project_slug}}"
author = "{{ cookiecutter.full_name }}"
author-email = "{{ cookiecutter.email }}"
home-page = 'https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}'
description-file = 'README.rst'
requires-python = "~={{ cookiecutter.python_version }}"
requires = [
]
classifiers = [
  'Programming Language :: Python :: {{ cookiecutter.python_version.split('.')[0] }}',
  'License :: OSI Approved :: {{"GNU General Public License v3 (GPLv3)" if cookiecutter.project_type == "application" else "MIT License"}}',
]

[tool.flit.metadata.requires-extra]
test = [
  'pytest',
  'pytest-cov',
  'parametrize_from_file',
  'coveralls',
]
doc = [
  'sphinx',
  'sphinx_rtd_theme',
  'autoclasstoc',
]
{% if cookiecutter.project_type == 'application' -%}
[tool.flit.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}:main"
{%- endif %}
[tool.flit.metadata.urls]
'Documentation' = 'https://{{ cookiecutter.project_slug }}.readthedocs.io/en/latest/'
'Version Control' = 'https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}'
'Bug Tracker' = 'https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues'
'Continuous Integration' = 'https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/actions'
'Test Coverage' = 'https://coveralls.io/github/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}'

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.rst'"
doctest_optionflags = 'NORMALIZE_WHITESPACE'

[tool.pccc]
header_length = 72
types = ["chore", "docs", "feat", "fix", "refactor", "style", "test"]

[tool.semantic_release]
version_variable = '{{ cookiecutter.project_slug }}/__init__.py:__version__'
build_command = 'python -m pip install flit && flit build'
