[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "{{ cookiecutter.project_slug}}"
authors = [
  {name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}"},
]
readme = 'README.rst'
dynamic = ["version", "description"]
requires-python = "~={{ cookiecutter.python_version }}"
classifiers = [
  'Programming Language :: Python :: 3',
]
dependencies = [
]

[project.optional-dependencies]
test = [
  'pytest',
  'pytest-cov',
  'parametrize_from_file',
  'coveralls',
]
doc = [
  'sphinx',
  'sphinx_rtd_theme',
  'autoclasstoc',
]
{% if cookiecutter.project_type == 'application' -%}
[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}:main"
{%- endif %}
[project.urls]
'Documentation' = 'https://{{ cookiecutter.project_slug }}.readthedocs.io/en/latest/'
'Version Control' = 'https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}'
'Bug Tracker' = 'https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues'
'Continuous Integration' = 'https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/actions'
'Test Coverage' = 'https://coveralls.io/github/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}'

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.rst'"
doctest_optionflags = 'NORMALIZE_WHITESPACE'

[tool.pccc]
header_length = 72
types = ["chore", "docs", "feat", "fix", "refactor", "style", "test"]
ignore_generated_commits = true
generated_commits = ['^Merge']

[tool.semantic_release]
branch = 'release'
version_variable = '{{ cookiecutter.project_slug }}/__init__.py:__version__'
build_command = 'python -m pip install flit && flit build'
major_on_zero = false
